tests/errors/runtime.CannotConvert.res
123
123
>> Runtime | File: runtime.CannotConvert.art
     error | Line: 3
           | 
           | cannot convert argument: 1.2
           | from :floating
           | to   :date